--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -30,7 +30,7 @@
             <% @album.photos.each do |photo| %>
             <div class="col-4 px-0">
                 <% if photo.representable? %>
-                    <%= cl_image_tag photo.key, class: "mw-100" %>
+                    <img class="mw-100" src="<%= cloudinary_url(photo.key,  height: 500, crop: :scale) %>" >
                 <% else %>
                     <%= link_to rails_blob_path(file, disposition: "attachment") do %>
                         <%= image_tag "placeholder.png", alt: "Download file" %>
