--- a/app/views/stadia/_stadium.html.erb
+++ b/app/views/stadia/_stadium.html.erb
@@ -20,6 +20,7 @@
                     <%= stadium.location.country %>
                 </h6>
                 <%= link_to '<i class="bi bi-file-text"></i>'.html_safe, stadia_searchposts_path(id: stadium.id), :method => :get, class: "btn btn-secondary btn-sm ms-1" %>
+                <%= link_to '<i class="bi bi-camera"></i>'.html_safe, stadia_searchalbums_path(id: stadium.id), :method => :get, class: "btn btn-secondary btn-sm ms-1" %>
                 <%= link_to '<i class="bi bi-person-vcard"></i>'.html_safe, stadium_posts_searchposts_path(id: stadium.id), :method => :get, class: "btn btn-secondary btn-sm ms-1" %>
 
                 <% if user_signed_in? %>
