add searchalbums for stadium_posts

--- a/app/views/stadium_posts/searchposts.html.erb
+++ b/app/views/stadium_posts/searchposts.html.erb
@@ -1,26 +1,3 @@
-<div class="container text-start mb-3 mt-1">
-  <div class="row justify-content-end">
-    <div class="col"><h4>
-        <%= t('.title_part1') %>
-        <%= @stadium.name %>,
-        <%= Location.human_enum_name(:loctype, @stadium.location.loctype) %> <%= @stadium.location.name %>
-        <% if @posts.empty? %>
-            <%= t('.title_empty') %>
-        <% else %>
-            (<%= t('.title_part2') %> <%= @posts.count %>)
-        <% end %>
-    </h4></div>
-  </div>
-</div>
+<%= render 'searchtitle' %>
 
-<div class="container">
-  <div class="row">
-    <% @posts.each do |post| %>
-      <%= render 'posts/post', post: post %>
-    <% end %>
-  </div>
-</div>
-
-<div class="d-flex justify-content-center">
-  <%== pagy_bootstrap_combo_nav_js(@pagy) if @pagy.pages > 1 %>
-</div>
+<%= render 'shared/searchposts' %>
