--- a/app/views/stadia/show.html.erb
+++ b/app/views/stadia/show.html.erb
@@ -19,6 +19,10 @@
         <% end %>
       </h4>
     </div>
+    <div>
+        <%= link_to '<i class="bi bi-file-text"></i>'.html_safe, stadium_posts_searchposts_path(id: @stadium.id), :method => :get, class: "btn btn-secondary btn-sm ms-1" %>
+        <%= link_to '<i class="bi bi-camera"></i>'.html_safe, stadium_posts_searchalbums_path(id: @stadium.id), :method => :get, class: "btn btn-secondary btn-sm ms-1" %>
+    </div>
   </div>
   <% if @stadium.stadiuminfo.present? %>
     <%= @stadium.stadiuminfo %>
