--- a/app/views/matches/_form.html.erb
+++ b/app/views/matches/_form.html.erb
@@ -1,68 +1,74 @@
-<%= form_with(model: match, html: {class: "card p-3 my-3"}) do |form| %>
-    <% if match.errors.any? %>
-        <div style="color: red">
-        <h2><%= t 'forms.messages.errors', count: match.errors.count %></h2>
+<% if @posts.empty? %>
+  <div class="container text-center text-danger">
+    <h6><%= t('.posts_empty') %></h6>
+  </div>
+<% else %>
+  <%= form_with(model: match, html: {class: "card p-3 my-3"}) do |form| %>
+      <% if match.errors.any? %>
+          <div style="color: red">
+          <h2><%= t 'forms.messages.errors', count: match.errors.count %></h2>
 
-        <ul>
-            <% match.errors.each do |error| %>
-            <li><%= error.full_message %></li>
-            <% end %>
-        </ul>
-        </div>
-    <% end %>
-
-    <div class="row g-3">
-
-        <div class="col-md-8">
-            <%= form.label :tournament_id, t('.tournament'), style: "display: block" %>
-            <%= select(:match, :tournament_id, options_for_select(@tournaments, :selected => form.object.tournament_id), {:prompt => t('.prompt.tournament')}, {:class => "form-select"}) %>
-        </div>
-
-        <div class="col-md-4">
-            <%= form.label :stage, t('.stage'), style: "display: block" %>
-            <%= form.text_field :stage,  placeholder: t('.placeholder.stage'), class: "form-control" %>
-        </div>
-
-        <div class="col-md-3">
-          <%= form.label :match_date, t('.matchdate'), style: "display: block" %>
-          <%= form.date_field :match_date, :value => ( form.object.match_date || Time.now.to_date), class: "form-control" %>
-        </div>
-
-        <div class="col-md-9">
-            <%= form.label :stadium_id, t('.stadium'), style: "display: block" %>
-            <%= select(:match, :stadium_id, options_for_select(@stadia, :selected => form.object.stadium_id), {:prompt => t('.prompt.stadium')}, {:class => "form-select"}) %>
-        </div>
-
-        <div class="col-md-6">
-            <%= form.label :home_team_id, t('.hometeam'), style: "display: block" %>
-            <%= select(:match, :home_team_id, options_for_select(@teams, :selected => form.object.home_team_id), {:prompt => t('.prompt.hometeam')}, {:class => "form-select"}) %> 
-        </div>
-
-        <div class="col-md-6">
-            <%= form.label :visitor_team_id, t('.visitorteam'), style: "display: block" %>
-            <%= select(:match, :visitor_team_id, options_for_select(@teams, :selected => form.object.visitor_team_id), {:prompt => t('.prompt.visitorteam')}, {:class => "form-select"}) %>
-        </div>
-
-        <div class="col-md-3">
-          <%= form.label :home_team_goal, t('.score'), style: "display: block" %>
-          <div class="input-group">          
-            <%= form.number_field :home_team_goal, min: 0, step: 1, :value => (form.object.home_team_goal || 0), class: "form-control" %>
-            <span class="input-group-text">:</span>
-            <%= form.number_field :visitor_team_goal, min: 0, step: 1, :value => (form.object.visitor_team_goal || 0), class: "form-control" %>
+          <ul>
+              <% match.errors.each do |error| %>
+              <li><%= error.full_message %></li>
+              <% end %>
+          </ul>
           </div>
-        </div>
+      <% end %>
 
-        <div class="col-md-4">
-            <%= form.label :post_id, t('.post'), style: "display: block" %>
-            <%= select(:match, :post_id, options_for_select(@posts, :selected => form.object.post_id), {:prompt => t('.prompt.post')}, {:class => "form-select"}) %>
-        </div>
+      <div class="row g-3">
 
-        <div class="col-12">
-          <%= form.button nil, class: "btn btn-success" do %>
-            <i class="bi bi-check-lg"></i> <%= t('button.submit') %>
-          <% end %>
-        </div>
+          <div class="col-md-8">
+              <%= form.label :tournament_id, t('.tournament'), style: "display: block" %>
+              <%= select(:match, :tournament_id, options_for_select(@tournaments, :selected => form.object.tournament_id), {:prompt => t('.prompt.tournament')}, {:class => "form-select"}) %>
+          </div>
 
-    </div>
+          <div class="col-md-4">
+              <%= form.label :stage, t('.stage'), style: "display: block" %>
+              <%= form.text_field :stage,  placeholder: t('.placeholder.stage'), class: "form-control" %>
+          </div>
 
+          <div class="col-md-3">
+            <%= form.label :match_date, t('.matchdate'), style: "display: block" %>
+            <%= form.date_field :match_date, :value => ( form.object.match_date || Time.now.to_date), class: "form-control" %>
+          </div>
+
+          <div class="col-md-9">
+              <%= form.label :stadium_id, t('.stadium'), style: "display: block" %>
+              <%= select(:match, :stadium_id, options_for_select(@stadia, :selected => form.object.stadium_id), {:prompt => t('.prompt.stadium')}, {:class => "form-select"}) %>
+          </div>
+
+          <div class="col-md-6">
+              <%= form.label :home_team_id, t('.hometeam'), style: "display: block" %>
+              <%= select(:match, :home_team_id, options_for_select(@teams, :selected => form.object.home_team_id), {:prompt => t('.prompt.hometeam')}, {:class => "form-select"}) %> 
+          </div>
+
+          <div class="col-md-6">
+              <%= form.label :visitor_team_id, t('.visitorteam'), style: "display: block" %>
+              <%= select(:match, :visitor_team_id, options_for_select(@teams, :selected => form.object.visitor_team_id), {:prompt => t('.prompt.visitorteam')}, {:class => "form-select"}) %>
+          </div>
+
+          <div class="col-md-3">
+            <%= form.label :home_team_goal, t('.score'), style: "display: block" %>
+            <div class="input-group">          
+              <%= form.number_field :home_team_goal, min: 0, step: 1, :value => (form.object.home_team_goal || 0), class: "form-control" %>
+              <span class="input-group-text">:</span>
+              <%= form.number_field :visitor_team_goal, min: 0, step: 1, :value => (form.object.visitor_team_goal || 0), class: "form-control" %>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+              <%= form.label :post_id, t('.post'), style: "display: block" %>
+              <%= select(:match, :post_id, options_for_select(@posts, :selected => form.object.post_id), {:prompt => t('.prompt.post')}, {:class => "form-select"}) %>
+          </div>
+
+          <div class="col-12">
+            <%= form.button nil, class: "btn btn-success" do %>
+              <i class="bi bi-check-lg"></i> <%= t('button.submit') %>
+            <% end %>
+          </div>
+
+      </div>
+      
+  <% end %>
 <% end %>
