--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -61,13 +61,16 @@
                 </li>
             </ul>
 
-            <% if user_signed_in? %>
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
+
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <% if user_signed_in? %>
                         <%= button_to t('navigation.logout'), destroy_user_session_path, method: :delete, data: { turbo_method: :delete }, class: "btn  btn-outline-info" %>
-                    </li>
-                </ul>
-            <% end %>
+                    <% else %>
+                        <%= link_to t('navigation.login'), new_user_session_path, class: "btn btn-outline-dark btn-sm" %>
+                    <% end %>
+                </li>
+            </ul>
 
         </div>
 
