--- a/app/views/matches/_match.html.erb
+++ b/app/views/matches/_match.html.erb
@@ -41,7 +41,7 @@
 
                     <tr>
                         <td colspan="3">
-                            <i class="bi bi-calendar3"></i> <%= match.match_date %>
+                            <i class="bi bi-calendar3"></i> <%= match.post.postdate %>
                         </td>
                     </tr>
 
