--- a/app/views/stadia/_form.html.erb
+++ b/app/views/stadia/_form.html.erb
@@ -1,43 +1,49 @@
-<%= form_with(model: stadium, html: {class: "card p-3 my-3"}) do |form| %>
-    <% if stadium.errors.any? %>
-        <div style="color: red">
-        <h2><%= t 'forms.messages.errors', count: stadium.errors.count %></h2>
+<% if @locations.empty? %>
+  <div class="container text-center text-danger">
+    <h6><%= t('.locations_empty') %></h6>
+  </div>
+<% else %>
+  <%= form_with(model: stadium, html: {class: "card p-3 my-3"}) do |form| %>
+      <% if stadium.errors.any? %>
+          <div style="color: red">
+          <h2><%= t 'forms.messages.errors', count: stadium.errors.count %></h2>
 
-        <ul>
-            <% stadium.errors.each do |error| %>
-            <li><%= error.full_message %></li>
+          <ul>
+              <% stadium.errors.each do |error| %>
+              <li><%= error.full_message %></li>
+              <% end %>
+          </ul>
+          </div>
+      <% end %>
+
+      <div class="row g-3">
+          <div class="col-md-6">
+            <%= form.label :name, t('.name'), style: "display: block" %>
+            <%= form.text_field :name,  placeholder: t('.placeholder.name'), autofocus: true, class: "form-control" %>
+          </div>
+
+          <div class="col-md-6">
+            <%= form.label :street, t('.street'), style: "display: block" %>
+            <%= form.text_field :street,  placeholder: t('.placeholder.street'), class: "form-control" %>
+          </div>
+
+          <div class="col-md-6">
+              <%= form.label :location_id, t('.location'), style: "display: block" %>
+              <%= select(:stadium, :location_id, options_for_select(@locations, :selected => form.object.location_id), {:prompt => t('.prompt')}, {:class => "form-select"} ) %>
+          </div>
+
+          <div class="field">
+            <%= form.label :stadiuminfo, t('.stadiuminfo'), style: "display: block" %>
+            <%= form.rich_text_area :stadiuminfo %>
+          </div>
+
+          <div class="col-12">
+            <%= form.button nil, class: "btn btn-success" do %>
+              <i class="bi bi-check-lg"></i> <%= t('button.submit') %>
             <% end %>
-        </ul>
-        </div>
-    <% end %>
+          </div>
 
-    <div class="row g-3">
-        <div class="col-md-6">
-          <%= form.label :name, t('.name'), style: "display: block" %>
-          <%= form.text_field :name,  placeholder: t('.placeholder.name'), autofocus: true, class: "form-control" %>
-        </div>
+      </div>
 
-        <div class="col-md-6">
-          <%= form.label :street, t('.street'), style: "display: block" %>
-          <%= form.text_field :street,  placeholder: t('.placeholder.street'), class: "form-control" %>
-        </div>
-
-        <div class="col-md-6">
-            <%= form.label :location_id, t('.location'), style: "display: block" %>
-            <%= select(:stadium, :location_id, options_for_select(@locations, :selected => form.object.location_id), {:prompt => t('.prompt')}, {:class => "form-select"} ) %>
-        </div>
-
-        <div class="field">
-          <%= form.label :stadiuminfo, t('.stadiuminfo'), style: "display: block" %>
-          <%= form.rich_text_area :stadiuminfo %>
-        </div>
-
-        <div class="col-12">
-          <%= form.button nil, class: "btn btn-success" do %>
-            <i class="bi bi-check-lg"></i> <%= t('button.submit') %>
-          <% end %>
-        </div>
-
-    </div>
-
+  <% end %>
 <% end %>
