--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,8 +1,4 @@
-<% if @locations.empty? %>
-  <div class="container text-center text-danger">
-    <h6><%= t('.locations_empty') %></h6>
-  </div>
-<% else %>
+<% if @locations.present? %>
   <%= form_with(model: post, html: {class: "card p-3 my-3"}) do |form| %>
       <% if post.errors.any? %>
           <div style="color: red">
@@ -57,4 +53,8 @@
       </div>
 
   <% end %>
+<% else %>
+  <div class="container text-center text-danger">
+    <h6><%= t('.locations_empty') %></h6>
+  </div>
 <% end %>
