--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -3,6 +3,7 @@
         <div class="col">
             <h4>
                 <%= @album.post.title %>
+                <%= link_to '<i class="bi bi-file-text"></i>'.html_safe, post_path(id: @album.post_id), class: "btn btn-secondary ms-2" %>
                 <% if user_signed_in? %>
                     <%= link_to '<i class="bi bi-highlighter"></i>'.html_safe, edit_album_path(@album), class: "btn btn-secondary ms-2" %>
                 <% end %>
