--- a/app/views/posts/typeposts.html.erb
+++ b/app/views/posts/typeposts.html.erb
@@ -11,14 +11,4 @@
   </div>
 </div>
 
-<div class="container">
-  <div class="row">
-    <% @posts.each do |post| %>
-      <%= render 'posts/post', post: post %>
-    <% end %>
-  </div>
-</div>
-
-<div class="d-flex justify-content-center">
-  <%== pagy_bootstrap_combo_nav_js(@pagy) if @pagy.pages > 1 %>
-</div>
+<%= render 'shared/searchposts' %>
