recreate model, controller, views for connection 'post about stadium'

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -38,6 +38,10 @@
                             <li class="nav-item">
                                 <%= link_to t('navigation.matches'), matches_path, class: "dropdown-item" %>
                             </li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li class="nav-item">
+                                <%= link_to t('navigation.post_about_stadia'), post_about_stadia_path, class: "dropdown-item" %>
+                            </li>
                         <% end %>
                     </ul>
                 </li>
