add modal_image_gallery to album

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,5 +15,6 @@
  */
 
 /* Custom bootstrap variables must be set or imported *before* bootstrap.*/
+@import "modal_image_gallery.css";
 @import "actiontext.css";
 @import "bootstrap";
