--- a/app/assets/stylesheets/modal_image_gallery.css
+++ b/app/assets/stylesheets/modal_image_gallery.css
@@ -1,19 +1,21 @@
+/* Modified code from from https://www.w3schools.com/howto/howto_js_lightbox.asp */
+
 .row > .column {
   padding: 0 8px;
 }
-  
+
 .row:after {
     content: "";
     display: table;
     clear: both;
 }
-  
+
   /* Create four equal columns that floats next to eachother */
   .column {
     float: left;
     width: 25%;
   }
-  
+
   /* The Modal (background) */
   .modal {
     display: none;
@@ -26,7 +28,7 @@
     overflow: auto;
     background-color: black;
   }
-  
+
   /* Modal Content */
   .modal-content {
     position: relative;
@@ -36,33 +38,34 @@
     width: 90%;
     max-width: 1200px;
   }
-  
+
   /* The Close Button */
   .close {
     color: white;
     position: absolute;
     top: 5px;
-    right: 5px;
+    right: 25px;
     font-size: 35px;
     font-weight: bold;
   }
-  
+
   .close:hover,
   .close:focus {
     color: #999;
     text-decoration: none;
     cursor: pointer;
   }
-  
+
   /* Hide the slides by default */
   .mySlides {
     display: none;
   }
-  
+
   /* Next & previous buttons */
   .prev,
   .next {
     cursor: pointer;
+    text-decoration: none;
     position: absolute;
     top: 50%;
     width: auto;
@@ -76,28 +79,28 @@
     user-select: none;
     -webkit-user-select: none;
   }
-  
+
   /* Position the "next button" to the right */
   .next {
     right: 0;
     border-radius: 3px 0 0 3px;
   }
-  
+
   /* On hover, add a black background color with a little bit see-through */
   .prev:hover,
   .next:hover {
     background-color: rgba(0, 0, 0, 0.8);
   }
-  
+
   /* Number text (1/3 etc) */
   .numbertext {
     color: #f2f2f2;
-    font-size: 12px;
+    font-size: 20px;
     padding: 8px 12px;
     position: absolute;
     top: 0;
   }
-  
+
   /* Caption text */
   .caption-container {
     text-align: center;
@@ -105,20 +108,20 @@
     padding: 2px 16px;
     color: white;
   }
-  
+
   img.demo {
     opacity: 0.6;
   }
-  
+
   .active,
   .demo:hover {
     opacity: 1;
   }
-  
-  img.hover-shadow {    
+
+  img.hover-shadow {
     transition: 0.3s;
   }
-  
+
   .hover-shadow:hover {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
