resolve conflict with pagy and modal_image_gallery styles

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,4 +16,5 @@
 
 /* Custom bootstrap variables must be set or imported *before* bootstrap.*/
 @import "actiontext.css";
+@import "modal_image_gallerry.css";
 @import "bootstrap";
