--- a/app/assets/stylesheets/modal_image_gallery.css
+++ b/app/assets/stylesheets/modal_image_gallery.css
@@ -43,7 +43,7 @@
   .close {
     color: white;
     position: absolute;
-    top: 5px;
+    top: 10px;
     right: 25px;
     font-size: 35px;
     font-weight: bold;
@@ -62,8 +62,8 @@
   }
 
   /* Next & previous buttons */
-  .prev,
-  .next {
+  .mig_prev,
+  .mig_next {
     cursor: pointer;
     text-decoration: none;
     position: absolute;
@@ -73,7 +73,7 @@
     margin-top: -50px;
     color: white;
     font-weight: bold;
-    font-size: 50px;
+    font-size: 20px;
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
@@ -81,21 +81,21 @@
   }
 
   /* Position the "next button" to the right */
-  .next {
+  .mig_next {
     right: 0;
     border-radius: 3px 0 0 3px;
   }
 
   /* On hover, add a black background color with a little bit see-through */
-  .prev:hover,
-  .next:hover {
+  .mig_prev:hover,
+  .mig_next:hover {
     background-color: rgba(0, 0, 0, 0.8);
   }
 
   /* Number text (1/3 etc) */
   .numbertext {
     color: #f2f2f2;
-    font-size: 20px;
+    font-size: 15px;
     padding: 8px 12px;
     position: absolute;
     top: 0;
