--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -62,6 +62,9 @@
                             <%= link_to t('navigation.karting'), posts_typeposts_path(:posttype => "karting"), class: "dropdown-item" %>
                         </li>
                     </ul>
+                    <li class="nav-item">
+                        <%= link_to t('navigation.about_blog'), about_blog_path, class: "nav-link text-white" %>
+                    </li>
                 </li>
             </ul>
 
