--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -28,5 +28,7 @@
       </h6>
     </div>
   </div>
-  <%= @post.content %>
+  <div style="text-align: justify; text-indent: 15px;">
+    <%= @post.content %>
+  </div>
 </div>
