--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -11,9 +11,11 @@
       </h4>
     </div>
   </div>
-  <% if @team.teaminfo.present? %>
-    <%= @team.teaminfo %>
-  <% else %>
-    <%= t('.teaminfo_empty') %>
-  <% end %>
+  <div style="text-align: justify; text-indent: 15px;">
+    <% if @team.teaminfo.present? %>
+      <%= @team.teaminfo %>
+    <% else %>
+      <%= t('.teaminfo_empty') %>
+    <% end %>
+  </div>
 </div>
